# pyrmaid

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
pyrmaid/: constants.py  introspect.py  members.py  options.py  parents.py  utils.py
pyrmaid/templates/: simple.html.jinja
tests/: test_composition.py  test_inheritance.py  test_template_pattern.py
