[tool.poetry]
name = "pyrmaid"
version = "0.1.0"
description = "A python library for converting python objects to UML diagrams using mermaid-js"
authors = ["JJAA91"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-mypy = "^0.8.1"
black = "^21.11b1"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.15.0"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"

[tool.pytest.ini_options]
minversion = "6.2.5"
addopts = "--show-capture=no --cov --mypy"
log_cli = false
log_file = "tests/pytest.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "analyzer: Marks a test relating to the class analyzer",
    "html: Marks a test that generates a html file",
]

[tool.coverage.run]
source = [ "pyrmaid", ]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 90
exclude_lines = [ "pragma: no cover", "@abstract", "@abc.abstract" ]

[tool.mypy]
mypy_path = "pyrmaid/"
ignore_missing_imports = true
python_version = 3.8
disallow_any_unimported = true
strict_optional = true

[tool.pydocstyle]
add-ignore = "D104, D105, D107, D203, D401"
convention = "google"
match-dir = "(?!tests).*"

[tool.black]
line-length = 120
target-version = ["py37", "py38"]
verbose = false
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 120
remove_redundant_aliases = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
